# OAMK_Koodit

./: README.md
sql_viikko2/: employees_copy.sql  pet_copy.sql  sakila_copy.sql
untitled5cpp/: CMakeLists.txt  main.cpp
untitled6cpp/: CMakeLists.txt  game.cpp  game.h  main.cpp
untitled7cpp/: CMakeLists.txt  chef.cpp  chef.h  cheff.cpp  cheff.h  italianchef.cpp  italianchef.h  main.cpp
untitled8cpp/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h  untitled8cpp_fi_FI.ts
untitled9cpp/: CMakeLists.txt  main.cpp
